--- a/jdbc.properties
+++ b/jdbc.properties
@@ -1,6 +1,8 @@
 #\u6570\u636E\u6E90\u914D\u7F6E\u6587\u4EF6
 #Thu May 21 18:01:05 CST 2020
-db.password=root
+db.password=scott
 db.url=jdbc\:mysql\://192.168.3.33\:3306/edp
 db.driverClassName=com.mysql.jdbc.Driver
-db.username=root
+db.username=scott
+
+#本地做了负责功能代码的修改，需要push至远程origin
